<resources>
    <string name="app_name">Fifty2</string>
    <string name="monday_1">Понедельник № 1 – наиважнейший день с точки зрения будущего успеха, поскольку в этот день вы определяете критерии успеха и прокладываете маршрут движения к нему. Это даже важнее, чем исполнить обещания, которые вы дали себе в канун Нового года, когда обдумывали, что бы такого вам хотелось добиться в предстоящем году.
В остальные понедельники вы будете учиться грамотно управлять и распоряжаться своим временем, поскольку нет в жизни ничего более разорительного, чем откладывать дела на потом. Ну‑ка вспомните, сколько раз вы давали себе зарок: «Завтра уж точно сделаю»? Тех, кто еще не осознал значения сказанного мною выше, призываю крепко задуматься вот о чем: время, отпущенное нам в этой жизни, представляет собой бесконечную череду сегодня, а вот насчет будущего никакой гарантии нет .
Но вернемся к нашим делам. Превосходно, если вы уже наметили себе цели на год. Это означает, что вы решили, в какое русло направить свою жизненную энергию. Тем, кто еще не сделал этот первый и наиважнейший шаг, рекомендую продумать, достижению каких целей вы хотите посвятить следующие 52 недели своей жизни.
Если вы твердо решили, что каждый день будете делать по одному маленькому шажку в сторону желаемой цели (скажем, ежедневно делать звонок одному перспективному клиенту или посылать одно электронное письмо), это хорошо. Но если вы возьмете за правило делать эти маленькие шажки минут через 5–10 после того, как встали с постели, – еще лучше: вы сможете посвятить свой день занятиям более приятным. Не зря говорят, сделал дело – гуляй смело!
Суть в том, что эта первая неделя отводится на то, чтобы вы набрали начальный импульс движения  или разгон на год вперед. Представьте, что ваш успех – огромный валун, примостившийся не слишком устойчиво, на вершине горы. Если вы его слегка подтолкнете, он сдвинется с места и переместится по склону чуть ниже, хотя этого усилия не хватит, чтобы он докатился до подножия горы. Так вот, все, что от вас требуется в эту первую неделю, – каждый день немножко подталкивать свой «валун», чтобы к следующему понедельнику он сполз хотя бы чуточку вниз по склону. По прошествии 52 недель вы с радостью увидите, что ваш «валун» благополучно докатился до подножия горы и прочно угнездился в предназначенном для него месте.
На протяжении года вы постепенно дозреете до той простой мысли, что никто и ничто не мешает вам достичь задуманного, кроме вас самих, что это вы сами ставите себе палки в колеса на пути к заветной мечте. Ну так давайте, включайтесь… Воспряньте духом, призовите свой энтузиазм, ибо вы стоите на пороге новой, захватывающе интересной фазы вашей жизни!
    </string>
    <string name="task_1">Думаю, вы не раз слышали: «Ты и вчера говорил “завтра”!» Давайте договоримся, что отныне такого никогда не скажут в ваш адрес! Каждый божий день напоминайте себе, что сегодня и есть тот самый день , когда вы что‑то измените в своей жизни.
Допустим, вы поставили себе цель – сбросить лишний вес, или написать сценарий кинофильма, или роман, или, например, основать собственный интернет‑бизнес. В любом случае вам нужно найти какие‑нибудь способы, чтобы ежедневно подпитывать собственную мотивацию и ответственность за выполнение намеченного. А потому ваше задание на предстоящую неделю будет следующим: выбрать хотя бы один из приведенных ниже методов, чтобы регулярно отчитываться о сделанном, и до конца недели включить его в свой распорядок дня.
Примкните к онлайновой группе поддержки (отличный ресурс для того, чтобы делать первые шаги, – The ChampionsClub.org). Заведите себе как минимум одного друга, известите его о своей цели и продумайте, как будете фиксировать (учитывать) свои каждодневные усилия для достижения своей цели.
Напишите для себя записку о намеченном на сегодняшний день деле, которое на шаг приближает вас к цели, например: «Сегодня я делаю то‑то и то‑то…» И поместите ее в таком месте, чтобы она первой бросалась в глаза, когда вы просыпаетесь, и последней, что вы видите перед тем, как заснуть. Рекомендую прикрепить ее к зеркалу в ванной комнате, кофеварке или дверце холодильника – в общем, это должно быть такое место, мимо которого вы никак не пройдете, выполняя свои ежедневные утренние и вечерние процедуры. Когда намеченное будет выполнено, снимите эту записку перед тем, как ляжете спать, и на ее место повесьте другую, чтобы после пробуждения сразу ее увидеть. Заведите себе дневник, где будете записывать каждое свое свершение на пути к цели, – это позволит вести учет выполненных вами дел на протяжении всего года.
Найдите кого‑то (возможно, из вашей группы поддержки), кто желает достичь той же цели столь же сильно, как и вы, и договоритесь с ним, что будете ежедневно отчитываться друг перед другом за сделанное за день. Обсудите, как станете обмениваться информацией: по электронной почте, эсэмэсками, по телефону, через Dropbox или при личном общении. Это поможет вам и вашему партнеру‑контролеру выработать привычку регулярно отчитываться и проверять друг друга.
Наймите кого‑нибудь, кто будет курировать выполнение вами задач, направленных к достижению вашей цели. Это может быть инструктор по личностному развитию, персональный тренер, наставник или руководитель группы взаимопомощи (если вы посещаете группы взаимопомощи вроде Анонимных алкоголиков или участвуете в программах, которые помогают преодолевать жизненные трудности).
    </string>
    <string name="motivation_1">Вы – молодец, вы – победитель, и у вас получается все, за что вы ни беретесь. Вы это знаете, и все вокруг тоже это знают.</string>
    <string name="motivation_2">Сегодня для вас нет преград.</string>
    <string name="motivation_3">Когда понадобится, у вас найдется еще больше решительности!</string>
    <string name="motivation_4">Когда понадобится, у вас найдется еще больше энергии и задора!</string>
    <string name="motivation_5">Вам по плечу любое дело, вам хватит настойчивости преодолеть любые препятствия, какие только ни встретятся на пути.</string>
    <string name="motivation_6"> Вы можете сделать это и знаете, что можете!</string>
    <string name="monday_2">
        На прошлой неделе я хотел подтолкнуть вас в нужном направлении, для чего рекомендовал несколько действий, призванных воспитать у вас привычку доводить до конца задуманное. На этой неделе от вас потребуется еще больше поработать над собой, поскольку я хочу, чтобы вы научились отдавать себе отчет в своих мыслях.
Помните, на прошлой неделе я говорил, что главнейшее препятствие на вашем пути к успеху кроется в вас самих? Ну так вот, ваши мысли представляют собой один из самых сильных инструментов, какие только есть в вашем распоряжении, чтобы преодолевать препятствия, которые вы сами себе создаете. Мысли, что крутятся у вас в голове, рождают чувства… чувства подталкивают к действиям… а действия приносят результаты. В сущности, мысли настолько тесно связаны с действием, что само по себе действие можно трактовать как форму «материальной мысли».
Не секрет, что сложнее всего изменить свой образ мыслей в тех ситуациях, когда жизнь подсовывает какие‑нибудь неприятности и вы не представляете, как принять их с легким сердцем. Например, можно ли настроиться на волну «я добываю деньги», если на вашу электронную почту с удручающим постоянством «капают» счета, требующие оплаты? Или, например, как настроиться на волну «похудение и стройность», если чертово зеркало безжалостно отражает лишние килограммы, свисающие уродливыми складками поверх пояса джинсов/юбки?
Так вот. Вы будете поражены, как сильно перепрограммирование мозгов способно изменить все вокруг! Давайте для примера представим, что у вас гора счетов, требующих оплаты, а между тем на этот год вы наметили себе цель заработать столько, чтобы расплатиться по всем денежным обязательствам. У вас нет ни единого шанса переключиться на образ мыслей богатого человека, если вы способны видеть лишь то, как ваши денежки уплывают от вас.
В таком положении вам вовсе не нужно убеждать себя «Я богат, у меня вдоволь денег». Все, что от вас требуется, – несколько изменить сам мыслительный процесс. Для этого нужно не констатировать факты, а задавать себе вопросы, например: «А что, если бы я был богат?» или «Что, если бы я располагал возможностями преодолеть препятствия, не позволяющие мне материально преуспеть?». Вопросы по сравнению с констатацией фактов имеют то преимущество, что не вторгаются в область вашего внутреннего «детектора лжи». Вы ведь знаете, когда врете себе, верно? А когда вы задаете себе вопрос, вы же не обманываете себя, вы просто честны с собой.
Далее вам требуется сформулировать ответы на ваши вопросы, такие как:
• Что бы я стал делать, если бы был богат?
• Как бы я стал действовать, если бы обладал способностью преодолеть препятствия на своем пути?
• Что бы я стал делать, если бы передо мной не было преград?
• Что бы я стал делать на этой неделе, если бы решил действовать как человек, для которого нет преград?
    </string>
    <string name="task_2">
        Мало мечтать о заветных целях. Вам необходимо распланировать свои действия по достижению этих целей вплоть до мельчайших шажков. На этой неделе вам следует раскошелиться на приобретение календаря. (Внимание: вам требуется именно бумажный  календарь, чтобы вы могли повесить его где‑нибудь, чтобы он был у вас на виду.) Как обзаведетесь таковым, начинайте мечтать. На странице с месяцем, который будет последним в вашем годичном путешествии, запишите избранную вами цель, затем наметьте для каждого месяца промежуточные ориентиры на пути к этой цели – это поможет в течение года сохранять фокусировку на цель.
Будьте предельно конкретны. Предположим, если вы ставите себе целью к концу года сбросить лишних 18 кг веса, разделите это количество на 12 – получатся промежуточные цели для каждого месяца (18 кг делим на 12, получается порядка 1,5 кг в месяц). Запишите этот показатель в начале каждого календарного месяца, а также укажите, какой диеты будете придерживаться и какие спортивные упражнения выполнять.
Если ваша цель – начать интернет‑бизнес, тогда для начала установите денежный показатель, которого планируете добиться к концу года. Затем составьте бизнес‑план на предстоящие 12 месяцев с ориентирами для каждого месяца – в виде количества новых деловых контактов, стадий разработки и раскрутки веб‑сайта, объема выручки, которую требуется заработать за данный месяц и т. п.
Теперь повесьте календарь на видное место, чтобы он был перед глазами каждый день и вы могли делать в нем пометки по ходу исполнения намеченного. Да, и расскажите об этом упражнении с календарем своему партнеру‑контролеру, с которым договорились на прошлой неделе о взаимной отчетности. Постарайтесь подвигнуть его сделать то же самое.
    </string>
    <string name="defination_goals">Определите цель</string>
    <string name="way_goals">Выберите направление цели</string>
    <string name="name_of_goals">Название?</string>
    <string name="description_of_goals">Описание</string>
    <string name="target_kpi">Что будет достижением цели?</string>
    <string name="count_tasks">Количество задач для достижения цели</string>
    <string name="duration_goal">Срок достижения цели</string>
</resources>