<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/navigation_drawer">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_ccordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary">
            <android.support.v7.widget.Toolbar
                android:theme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_marginTop="@dimen/spacing_large_54"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_medium_20"
                    android:text="@string/defination_goals"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_normal_15"
                    android:text="@string/way_goals"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/way_goal_sp"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_large_54"
                    android:textSize="@dimen/font_normal_15"
                    android:textAlignment="viewStart"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center">
                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/name_goal_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal_15"
                        android:hint="@string/name_of_goals"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>

                <!--                <android.support.v7.widget.SwitchCompat
                                    android:id="@+id/linkview_sw"
                                    android:layout_weight="2.5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Выкл"
                                    android:textOff="Выкл"
                                    android:textOn="Вкл"/>-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/desc_goal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal_15"
                        android:hint="@string/description_of_goals"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/kpi_goal_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal_15"
                        android:hint="@string/target_kpi"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/duration_for_goals_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal_15"
                        android:hint="@string/duration_goal"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/count_tasks_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal_15"
                        android:hint="@string/count_tasks"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
<!--                <LinearLayout
                    android:id="@+id/kpi2_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et73"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="@string/tasks_kpi"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Количественный критерий"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et72"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="Числовой показатель достижения задания"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/kpi3_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="@string/tasks_kpi"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Количественный критерий"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="Числовой показатель достижения задания"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/kpi4_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et32"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="@string/tasks_kpi"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Количественный критерий"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal_15"
                            android:hint="Числовой показатель достижения задания"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>-->
                <Button
                    android:id="@+id/set_track_btn"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:layout_height="wrap_content"
                    android:text="Следующий экран"
                    android:textAllCaps="true"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>